Fixed text and editor wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -7,21 +7,6 @@ html, body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* .column.left {
-    width: 25vw;
-    float: left;
-}
-
-.column.middle {
-    margin: auto;
-    text-align: center;
-}
-
-.column.right {
-    width: 10vw;
-    float: right;
-} */
-
 .container {
     display: flex;
     margin: auto;
@@ -30,29 +15,39 @@ html, body {
 }
 
 #header {
-    height: 60px;
-    margin: 0;
-    padding-left: 23vw;
+    /* height: 60px; */
+    height: auto;
+    margin: auto;
     color: white;
     background-color: rgb(0, 152, 212);
     font-size: 22.4px;
-    line-height: 14px;
+    text-align: center;
+}
+
+#title {
+    margin: auto;
+    margin-top: 1.65vh;
+    margin-bottom: 1.65vh;
+    /* margin-left: 4vw; */
+    /* text-align: left; */
 }
 
 #promptGeneration {
     width: 54vw;
-    height: 288px;
+    /* height: 288px; */
+    height: auto;
     margin-bottom: 0;
     background-color: rgb(245, 245, 245);
+    border: 1px solid rgb(210, 210, 210);
 }
 
 #generatedPrompts {
     width: 61%;
-    height: 100%;
+    /* height: 100%; */
+    height: auto;
     padding-left: 16px;
     padding-right: 16px;
-    /* background-color: rgb(240, 240, 240); */
-    outline: 1px solid rgb(210, 210, 210);
+    border-right: 1px solid rgb(210, 210, 210);
     text-align: left;
 }
 
@@ -67,13 +62,11 @@ html, body {
 #userControls {
     width: 36%;
     height: 100%;
-    /* background-color: rgb(240, 240, 240); */
-    outline: 1px solid rgb(210, 210, 210);
     text-align: center;
 }
 
 #userGeneration {
-    height: 70%;
+    height: auto;
     padding-left: 16px;
     padding-right: 16px;
     border-bottom: 1px solid rgb(210, 210, 210);
@@ -94,9 +87,11 @@ html, body {
 }
 
 #timer {
-    height: 16%;
-    padding-top: 20px;
+    height: auto;
+    padding-top: 25px;
     padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 25px;
     text-align: left;
     display: flex;
     gap: 16px;
@@ -104,12 +99,12 @@ html, body {
 
 #countdown {
     margin: 0;
-    font-size: 19px;
+    font-size: 20px;
+    line-height: 2.4vh;
 }
 
 #userTime {
-    width: 38%;
-    height: 48%;
+    width: 40%;
     font-size: 13px;
     text-align: center;
 }
@@ -154,7 +149,6 @@ input::-webkit-inner-spin-button {
 }
 
 #editor {
-    width: 97%;
     height: 88%;
     margin: 16px;
     padding: 10px;
